tests/macro-tests/cases/widget_new/error_in_property_expr.stderr
error[E0433]: cannot find module or crate `unknown` in this scope
 --> cases/widget_new/error_in_property_expr.rs:7:21
  |
7 |             let _ = unknown::path();
  |                     ^^^^^^^ use of unresolved module or unlinked crate `unknown`
  |
  = help: if you wanted to use a crate named `unknown`, use `cargo add unknown` to add it to your `Cargo.toml`
